--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+      integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
@@ -40,7 +47,7 @@
     <!-- END HEADER -->
     <main>
       <!-- START Section HERO -->
-      <section class="hero">
+      <section class="section-hero">
         <div class="container">
           <h1 class="section-banner-title">Effective Solutions for Your Business</h1>
           <button type="button" class="btn-banner">Order Service</button>
@@ -51,32 +58,32 @@
       <!-- START Section FEATURES -->
       <section class="section-features">
         <div class="container">
-          <h2 hidden class="section-title">Features</h2>
+          <h2 class="section-title visually-hidden">Features</h2>
           <ul class="section-list list">
-            <li>
+            <li class="section-list-item">
               <h3 class="card-title">Strategy</h3>
-              <p class="section-text">
+              <p class="card-text">
                 Our goal is to identify the business problem to walk away with the perfect and
                 creative solution.
               </p>
             </li>
-            <li>
+            <li class="section-list-item">
               <h3 class="card-title">Punctuality</h3>
-              <p class="section-text">
+              <p class="card-text">
                 Bring the key message to the brand's audience for the best price within the shortest
                 possible time.
               </p>
             </li>
-            <li>
+            <li class="section-list-item">
               <h3 class="card-title">Diligence</h3>
-              <p class="section-text">
+              <p class="card-text">
                 Research and confirm brands that present the strongest digital growth opportunities
                 and minimize risk.
               </p>
             </li>
-            <li>
+            <li class="section-list-item">
               <h3 class="card-title">Technologies</h3>
-              <p class="section-text">
+              <p class="card-text">
                 Design practice focused on digital experiences. We bring forth a deep passion for
                 problem-solving.
               </p>
@@ -91,25 +98,53 @@
         <div class="container">
           <h2 class="section-title">Our Team</h2>
           <ul class="section-list list">
-            <li class="teammate-card">
-              <img src="./images/mark_guerrero.jpg" alt="Product Designer photo" width="264" />
-              <h3 class="card-title">Mark Guerrero</h3>
-              <p class="section-text">Product Designer</p>
+            <li class="section-list-item">
+              <img
+                class="card-image"
+                src="./images/mark_guerrero.jpg"
+                alt="Product Designer photo"
+                width="264"
+              />
+              <div class="card-info">
+                <h3 class="card-title">Mark Guerrero</h3>
+                <p class="card-text">Product Designer</p>
+              </div>
             </li>
-            <li class="teammate-card">
-              <img src="./images/tom_ford.jpg" alt="Frontend Developer photo" width="264" />
-              <h3 class="card-title">Tom Ford</h3>
-              <p class="section-text">Frontend Developer</p>
+            <li class="section-list-item">
+              <img
+                class="card-image"
+                src="./images/tom_ford.jpg"
+                alt="Frontend Developer photo"
+                width="264"
+              />
+              <div class="card-info">
+                <h3 class="card-title">Tom Ford</h3>
+                <p class="card-text">Frontend Developer</p>
+              </div>
             </li>
-            <li class="teammate-card">
-              <img src="./images/camila_garcia.jpg" alt="Marketing Manager photo" width="264" />
-              <h3 class="card-title">Camila Garcia</h3>
-              <p class="section-text">Marketing</p>
+            <li class="section-list-item">
+              <img
+                class="card-image"
+                src="./images/camila_garcia.jpg"
+                alt="Marketing Manager photo"
+                width="264"
+              />
+              <div class="card-info">
+                <h3 class="card-title">Camila Garcia</h3>
+                <p class="card-text">Marketing</p>
+              </div>
             </li>
-            <li class="teammate-card">
-              <img src="./images/daniel_wilson.jpg" alt="UI Designer photo" width="264" />
-              <h3 class="card-title">Daniel Wilson</h3>
-              <p class="section-text">UI Designer</p>
+            <li class="section-list-item">
+              <img
+                class="card-image"
+                src="./images/daniel_wilson.jpg"
+                alt="UI Designer photo"
+                width="264"
+              />
+              <div class="card-info">
+                <h3 class="card-title">Daniel Wilson</h3>
+                <p class="card-text">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -117,39 +152,81 @@
       <!-- END Section TEAM -->
 
       <!-- Section PORTFOLIO -->
-      <section class="section-porfolio">
+      <section class="section-portfolio">
         <div class="container">
           <h2 class="section-title">Our Portfolio</h2>
           <ul class="section-list list">
             <li class="portfolio-card">
-              <img src="./images/portfolio-1.jpg" alt="Banking App photo" width="360" />
-              <h3 class="card-title">Banking App</h3>
-              <p class="section-text">App</p>
+              <img
+                class="card-image"
+                src="./images/portfolio-1.jpg"
+                alt="Banking App photo"
+                width="360"
+              />
+              <div class="card-info">
+                <h3 class="card-title">Banking App</h3>
+                <p class="card-text">App</p>
+              </div>
             </li>
             <li class="portfolio-card">
-              <img src="./images/portfolio-2.jpg" alt="Cashless Payment photo" width="360" />
-              <h3 class="card-title">Cashless Payment</h3>
-              <p class="section-text">Marketing</p>
+              <img
+                class="card-image"
+                src="./images/portfolio-2.jpg"
+                alt="Cashless Payment photo"
+                width="360"
+              />
+              <div class="card-info">
+                <h3 class="card-title">Cashless Payment</h3>
+                <p class="card-text">Marketing</p>
+              </div>
             </li>
             <li class="portfolio-card">
-              <img src="./images/portfolio-3.jpg" alt="Meditation App photo" width="360" />
-              <h3 class="card-title">Meditation App</h3>
-              <p class="section-text">App</p>
+              <img
+                class="card-image"
+                src="./images/portfolio-3.jpg"
+                alt="Meditation App photo"
+                width="360"
+              />
+              <div class="card-info">
+                <h3 class="card-title">Meditation App</h3>
+                <p class="card-text">App</p>
+              </div>
             </li>
             <li class="portfolio-card">
-              <img src="./images/portfolio-4.jpg" alt="Taxi Service photo" width="360" />
-              <h3 class="card-title">Taxi Service</h3>
-              <p class="section-text">Marketing</p>
+              <img
+                class="card-image"
+                src="./images/portfolio-4.jpg"
+                alt="Taxi Service photo"
+                width="360"
+              />
+              <div class="card-info">
+                <h3 class="card-title">Taxi Service</h3>
+                <p class="card-text">Marketing</p>
+              </div>
             </li>
             <li class="portfolio-card">
-              <img src="./images/portfolio-5.jpg" alt="Screen Illustrations photo" width="360" />
-              <h3 class="card-title">Screen Illustrations</h3>
-              <p class="section-text">Design</p>
+              <img
+                class="card-image"
+                src="./images/portfolio-5.jpg"
+                alt="Screen Illustrations photo"
+                width="360"
+              />
+              <div class="card-info">
+                <h3 class="card-title">Screen Illustrations</h3>
+                <p class="card-text">Design</p>
+              </div>
             </li>
             <li class="portfolio-card">
-              <img src="./images/portfolio-6.jpg" alt="Online Courses photo" width="360" />
-              <h3 class="card-title">Online Courses</h3>
-              <p class="section-text">Marketing</p>
+              <img
+                class="card-image"
+                src="./images/portfolio-6.jpg"
+                alt="Online Courses photo"
+                width="360"
+              />
+              <div class="card-info">
+                <h3 class="card-title">Online Courses</h3>
+                <p class="card-text">Marketing</p>
+              </div>
             </li>
           </ul>
         </div>
